[gd_scene load_steps=16 format=2]

[ext_resource path="res://prefabs/lifeObject/bayu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/floor.tres" type="TileSet" id=2]
[ext_resource path="res://Button.png" type="Texture" id=3]
[ext_resource path="res://Test/Button.gd" type="Script" id=4]
[ext_resource path="res://Test/Portal.gd" type="Script" id=5]
[ext_resource path="res://Test/Button3.gd" type="Script" id=6]
[ext_resource path="res://Test/bayu(test).gd" type="Script" id=7]
[ext_resource path="res://Test/Label.gd" type="Script" id=8]
[ext_resource path="res://Test/Question UI.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Pressed"

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "Pressed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 17 )

[node name="test Puzzle" type="Node2D"]

[node name="bayu" parent="." instance=ExtResource( 1 )]
position = Vector2( 112, 112 )
collision_mask = 9
script = ExtResource( 7 )

[node name="Question UI" type="Control" parent="bayu"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="bayu/Question UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -119.0
margin_top = -89.0
margin_right = 66.0
margin_bottom = -49.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bayu/Question UI"]
margin_left = -92.0
margin_top = -87.0
margin_right = -18.0
margin_bottom = -73.0
text = "\"TEKA TEKI\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 131072, 10, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 10, 0, 131077, 10, 0, 131078, 10, 0, 131079, 10, 0, 196608, 10, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 0, 196612, 10, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 262144, 10, 0, 262145, 10, 0, 262146, 10, 0, 262147, 10, 0, 262148, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0, 327680, 10, 0, 327681, 10, 0, 327682, 10, 0, 327683, 10, 0, 327684, 10, 0, 327685, 10, 0, 327686, 10, 0, 327687, 10, 0, 393216, 10, 0, 393217, 10, 0, 393218, 10, 0, 393219, 10, 0, 393220, 10, 0, 393221, 10, 0, 393222, 10, 0, 393223, 10, 0, 458752, 10, 0, 458753, 10, 0, 458754, 10, 0, 458755, 10, 0, 458756, 10, 0, 458757, 10, 0, 458758, 10, 0, 458759, 10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pressed = SubResource( 1 )

[node name="Portal" type="ColorRect" parent="."]
visible = false
margin_left = 48.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 48.0
color = Color( 0.0666667, 0.0470588, 0.0470588, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Button" type="AnimatedSprite" parent="Button2"]
position = Vector2( 24, 72 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 4 )
animation = "Pressed"

[node name="Area2D" type="Area2D" parent="Button2"]
position = Vector2( 24, 72 )
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button2/Area2D"]
shape = SubResource( 5 )

[node name="Button3" type="Node2D" parent="."]
position = Vector2( 80, 0 )
script = ExtResource( 6 )

[node name="Button" type="AnimatedSprite" parent="Button3"]
position = Vector2( 24, 72 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 4 )
animation = "Pressed"

[node name="Area2D" type="Area2D" parent="Button3"]
position = Vector2( 24, 72 )
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button3/Area2D"]
shape = SubResource( 5 )

[node name="Stone Monument" type="Control" parent="."]
margin_left = 56.0
margin_top = 72.0
margin_right = 96.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stone Monument" type="ColorRect" parent="Stone Monument"]
margin_right = 16.0
margin_bottom = 24.0
color = Color( 0.317647, 0.298039, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Stone Monument/Stone Monument"]
position = Vector2( 8, 16 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stone Monument/Stone Monument/Area2D"]
position = Vector2( 0, 9 )
shape = SubResource( 6 )

[node name="Label" type="Label" parent="Stone Monument"]
visible = false
margin_left = -53.0
margin_top = -3.0
margin_right = 105.0
margin_bottom = 11.0
text = "Press \"space\" to interact"
script = ExtResource( 8 )

[connection signal="question_ui_off" from="bayu" to="bayu/Question UI" method="_on_bayu_question_ui_off"]
[connection signal="question_ui_on" from="bayu" to="bayu/Question UI" method="_on_bayu_question_ui_on"]
[connection signal="door_open" from="Button2" to="Portal" method="_on_Button2_door_open"]
[connection signal="body_entered" from="Button2/Area2D" to="Button2" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Button2/Area2D" to="Button2" method="_on_Area2D_body_exited"]
[connection signal="door_open" from="Button3" to="Portal" method="_on_Button2_door_open"]
[connection signal="body_entered" from="Button3/Area2D" to="Button3" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Button3/Area2D" to="Button3" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Stone Monument/Stone Monument/Area2D" to="bayu" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Stone Monument/Stone Monument/Area2D" to="Stone Monument/Label" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Stone Monument/Stone Monument/Area2D" to="bayu/Question UI" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Stone Monument/Stone Monument/Area2D" to="bayu" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Stone Monument/Stone Monument/Area2D" to="Stone Monument/Label" method="_on_Area2D_body_exited"]
