[gd_scene load_steps=8 format=2]

[ext_resource path="res://Test/Button.gd" type="Script" id=1]
[ext_resource path="res://Button.png" type="Texture" id=2]
[ext_resource path="res://asset/SoundEffects/529942__grizzlymittz__fighting-game-hit-sound.mp3" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "Pressed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Press_platform" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 3 )
animation = "Pressed"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Pressed_platform" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.105112, -0.052556 )
stream = ExtResource( 3 )
pitch_scale = 1.66

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
